Added grievous wounds page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <A HREF="mfcheatsheet.html">MF Cheat Sheet</A>
+<A HREF="mfgreviouswounds.html">When to buy Mortal Reminder over Lord Domnik's Regards</A>
