Links on new lines

--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-<A HREF="mfcheatsheet.html">MF Cheat Sheet</A>
-<A HREF="mfgreviouswounds.html">When to buy Mortal Reminder over Lord Domnik's Regards</A>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Links Page</title>
+</head>
+<body>
+  <p><a href="mfcheatsheet.html">MF Cheat Sheet 13.6</a></p>
+  <p><a href="mfgreviouswounds.html">Mortal Reminder vs Lord Domnik's Regards</a></p>
+</body>
+</html>
+
+
