bootless build idea

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
   <p><a href="mfcheatsheet.html">MF Cheat Sheet 13.6</a></p>
   <p><a href="mfgreviouswounds.html">Mortal Reminder vs Lord Domnik's Regards</a></p>
+  <p><a href="mfbootless130602.html">MF Cheat Sheet 13.6 v2 (No Boots)</a></p>
 </body>
 </html>
 
