--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
   <title>Links Page</title>
 </head>
 <body>
-  <p><a href="mfcheatsheet.html">MF Cheat Sheet 13.6</a></p>
-  <p><a href="mfgreviouswounds.html">Mortal Reminder vs Lord Domnik's Regards</a></p>
+  <p>Current Versions</a></p>
   <p><a href="mfbootless130602.html">MF Cheat Sheet 13.6 v2 (No Boots)</a></p>
+  <p><a href="mfgreviouswounds.html">Mortal Reminder vs Lord Domnik's Regards</a></p>
+  <p>------------------------------------------------------</a></p>
+  <p>Older Versions</a></p>
+  <p><a href="mfcheatsheet.html">MF Cheat Sheet 13.6</a></p>
+
 </body>
 </html>
 
