--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
   <title>Links Page</title>
 </head>
 <body>
-  <p>Updated for Patch 13.7</a></p>
+  <p>Current as of Patch 13.7</a></p>
   <p><a href="mfbloodline130701.html">MF Bloodline Builds p13.7</a></p>
   <p><a href="mfgreviouswounds.html">Mortal Reminder vs Lord Domnik's Regards</a></p>
   <p>------------------------------------------------------</a></p>
-  <p>Needs to be Updated</a></p>
+  <p>Created using older simulation engine build, should still be current</a></p>
   <p><a href="mfbootless130602.html">MF Bootless Builds p13.6 v2</a></p>
   <p><a href="mfcheatsheet.html">MF Cheat Sheet 13.6</a></p>
+  
+  <!-- <p>------------------------------------------------------</a></p> -->
+  <!-- <p>Outdated</a></p> -->
 </body>
 </html>
 
