--- a/public/404.html
+++ b/public/404.html
@@ -17,7 +17,7 @@
 <link rel="icon" href="/favicon.png" >
 <link rel="stylesheet" href="/book.min.b2d853d55719b549c81d1059cef7b7b3ebc8ea048c657205fe7c4a74f3072519.css" integrity="sha256-sthT1VcZtUnIHRBZzve3s&#43;vI6gSMZXIF/nxKdPMHJRk=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.a6b6f6922444e84f1ebc2910effb55136f87c7abbac154dbadecdb1f50cac540.js" integrity="sha256-prb2kiRE6E8evCkQ7/tVE2&#43;Hx6u6wVTbrezbH1DKxUA=" crossorigin="anonymous"></script>
+  <script defer src="/en.search.min.b04e96b218491b0d6056a84f8c800fae9a3a4099fd0f3612279dd2570447696f.js" integrity="sha256-sE6WshhJGw1gVqhPjIAPrpo6QJn9DzYSJ53SVwRHaW8=" crossorigin="anonymous"></script>
 
   
 
