--- a/public/404.html
+++ b/public/404.html
@@ -17,10 +17,7 @@
 <link rel="icon" href="/favicon.png" >
 <link rel="stylesheet" href="/book.min.b2d853d55719b549c81d1059cef7b7b3ebc8ea048c657205fe7c4a74f3072519.css" integrity="sha256-sthT1VcZtUnIHRBZzve3s&#43;vI6gSMZXIF/nxKdPMHJRk=" crossorigin="anonymous">
   <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.b04e96b218491b0d6056a84f8c800fae9a3a4099fd0f3612279dd2570447696f.js" integrity="sha256-sE6WshhJGw1gVqhPjIAPrpo6QJn9DzYSJ53SVwRHaW8=" crossorigin="anonymous"></script>
-
-  
-
+  <script defer src="/en.search.min.ce8cb370972c024ea5ee40536d923460ec54fab5a5b22aa8bbe213e3adb8563b.js" integrity="sha256-zoyzcJcsAk6l7kBTbZI0YOxU&#43;rWlsiqou&#43;IT4624Vjs=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
